resources/tests/invalid_syntax/binary.ct
//Error: Expected a '.'!
//1
fn hello()->void: 10 10 + 10 + 10 + 10;